<ScrollView 
       xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      android:id="@+id/scroll" 
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:background="#002664">

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#002664"
    android:orientation="vertical"
    android:layout_marginBottom="0dp"
     >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="25dp"
        android:textAppearance="@style/Texto2"
        android:text="@string/recomendacion2" />
    
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="78dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:layout_marginTop="10dp"
         android:background="#BB133E"
         android:onClick="salud"
         android:orientation="horizontal" >

         <ImageView
             android:id="@+id/salud"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginLeft="0dp"
        	 android:layout_marginTop="14dp"
             android:layout_weight="1"
             android:src="@drawable/salud"/>
         
          <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        android:layout_weight="2"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/salud"
        android:textColor="#ffffff"/>
        
         </LinearLayout>
         
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="78dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:layout_marginTop="10dp"
         android:background="#ffffff"
         android:orientation="horizontal" >

         <ImageView
             android:id="@+id/interes"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginLeft="20dp"
        	 android:layout_marginTop="14dp"
             android:layout_weight="1"
             android:src="@drawable/interes" />
         
          <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        android:layout_weight="2"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/interes"
        android:textColor="#BB133E"/>
          
          </LinearLayout>
          
      <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="78dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:layout_marginTop="10dp"
         android:background="#BB133E"
         android:orientation="horizontal" >

          <ImageView
              android:id="@+id/telefono"
              android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginLeft="30dp"
        	 android:layout_marginTop="14dp"
              android:src="@drawable/telefono_emergencia" />
          
           <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        android:layout_weight="2"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/telefono"
        android:textColor="#ffffff"/>
     
          </LinearLayout>
          
         <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="78dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="70dp"
         android:background="#ffffff"
         android:orientation="horizontal" >
             <ImageView
                 android:id="@+id/avion"
                 android:layout_width="50dp"
            	 android:layout_height="50dp"
            	 android:layout_marginLeft="30dp"
        	 	 android:layout_marginTop="14dp"
                 android:src="@drawable/aerelineas" />
             
              <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        android:layout_weight="2"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/avion"
        android:textColor="#BB133E"/>           
             </LinearLayout>
</LinearLayout>

</ScrollView>