<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#002664"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/Titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/Titulo"
        android:textAppearance="@style/MyStyle" />

    <TextView
        android:id="@+id/pais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:text="@string/pais"
        android:textAppearance="@style/Texto" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="5dp"
        android:elevation="3dp"
        android:background="#BB133E"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:src="@drawable/pesos" />

        <TextView
            android:id="@+id/link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="45dp"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="2"
            android:autoLink="web"            
            android:text="@string/link"
            android:textAppearance="@style/Texto1" />
    </LinearLayout>
    
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="5dp"
        android:background="#FFFFFF"
        android:elevation="3dp"
        android:orientation="horizontal" >
    
    
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:layout_marginTop="5dp"
         android:layout_weight=".5"
         android:background="#FFFFFF"
         android:fitsSystemWindows="true"
         android:orientation="vertical" >
        
         

         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginLeft="5dp"
             android:layout_marginTop="10dp"             
             android:src="@drawable/maleta"
             android:onClick="antesDeSalir" />

         <TextView
             android:id="@+id/antes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/antes"
             android:layout_marginLeft="2dp"
             android:textColor="#002664"
             android:textSize="14sp"
             android:textStyle="bold"
             android:shadowColor="#002664"
           
             />

    	 </LinearLayout>

    
    	 
	       <LinearLayout
	         android:layout_width="match_parent"
	         android:layout_height="wrap_content"
	         android:layout_marginBottom="10dp"
	         android:layout_marginLeft="30dp"
	         android:layout_marginRight="30dp"
	         android:layout_marginTop="10dp"
	         android:layout_weight=".5"
	         android:background="#FfFfFf"
	         android:fitsSystemWindows="true"
	         android:orientation="vertical" >
         
	           
	            <ImageView
         android:id="@+id/informacion"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:src="@drawable/informacion1" />
	            
	             <TextView
             android:id="@+id/informacion1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/informacion1"
             android:layout_marginLeft="5dp"
             android:layout_marginTop="5dp"
             android:textColor="#002664"
             android:textSize="14sp"
             android:textStyle="bold"
             android:shadowColor="#002664"
             />
         
           
         
           </LinearLayout>
         
     
     </LinearLayout>
     
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginBottom="10dp"
           android:layout_marginLeft="30dp"
           android:layout_marginRight="30dp"
           android:background="#FFFFFF"
           android:elevation="3dp"
           android:orientation="horizontal" >
    
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="30dp"
         android:layout_weight=".5"
         android:background="#FFFFFF"
         android:fitsSystemWindows="true"
         android:orientation="vertical" >
	             
         <ImageView
               android:id="@+id/protocolo"
               android:layout_width="50dp"
               android:layout_height="50dp"
               android:layout_marginTop="10dp"
               android:layout_marginLeft="20dp"
               android:onClick="protocoloDeNegocios"
               android:src="@drawable/libreta" />
         
          <TextView
             android:id="@+id/protocolo1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/protocolo1"
             android:layout_marginLeft="12dp"
             android:textColor="#002664"
             android:textSize="14sp"
             android:textStyle="bold"
             android:shadowColor="#002664"
             />
	                    
    	 </LinearLayout>
    	 
    	  <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:layout_weight=".5"
         android:background="#FFFFFF"
         android:fitsSystemWindows="true"
         android:orientation="vertical" >
         
    	        <ImageView
               android:id="@+id/emergencia"
               android:layout_width="50dp"
               android:layout_height="50dp"
               android:layout_marginTop="10dp"
               android:layout_marginLeft="10dp"
               android:src="@drawable/tel_emergencia" />
    	        
    	          <TextView
             android:id="@+id/emergencia1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/emergencia1"
             android:layout_marginLeft="7dp"
             android:textColor="#002664"
             android:textSize="14sp"
             android:textStyle="bold"
             android:shadowColor="#002664"
             />
         
     
    	 </LinearLayout>
     </LinearLayout>

</LinearLayout>